# RollLux

./: CHANGELOG.md  README.md  README_ja.md  README_zh-CN.md  __init__.py  ae_metering.py  analysis.py  audit_i18n.py  auto_exposure.py  blender_manifest.marketplace.toml  blender_manifest.toml  build.py  build_marketplace.py  clipboard.py  gen_assets.py  lighting.py  mcp_bridge.py  operators.py  overlay.py  packaging.py  presets.py  properties.py  test_blender.py  test_offline.py  translations.py  ui.py
.codex/: config.toml.example
.cursor/: mcp.json.example
assets/: README.md
dev/: _audit_zip_once.py  audit_marketplace_zip.py  gen_assets_main.py
mcp/: README.md  bridge_addon.py  pyproject.toml  run_light_object.py
mcp/rolllux_mcp/: __init__.py  blender_client.py  scripts.py  server.py
