[project]
name = "rolllux-mcp"
version = "0.1.0"
description = "MCP server to light Blender objects with RollLux"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
rolllux-mcp = "rolllux_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rolllux_mcp"]
